--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
-    "recharts": "https://esm.sh/recharts@^3.1.2"
+    "recharts": "https://esm.sh/recharts@^3.1.2",
+    "@google/genai": "https://esm.sh/@google/genai",
+    "pptxgenjs": "https://esm.sh/pptxgenjs@3.12.0"
   }
 }
 </script>
